--- a/testing-ex-2/pom.xml
+++ b/testing-ex-2/pom.xml
@@ -67,6 +67,11 @@
             <version>2.1.5.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
