--- a/testing-ex-2/pom.xml
+++ b/testing-ex-2/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.3.0</version>
+        </dependency>
 
         <!-- test -->
 
@@ -71,6 +76,13 @@
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <version>2.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.14.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
